--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<link rel="stylesheet" type="text/css" href="app/assets/stylesheets/application.css">
 		<link rel="shortcut icont" href="favicon.ico">
 		<script src="app/assets/javascripts/two.js"></script>
+		<script src="app/assets/javascripts/main.js"></script>
+		<div id="animation"></div>
+		<script src="app/assets/javascripts/intro.js"></script>
 		<meta charset="UTF-8">
 		<title>work and text</title>
 	</head>
@@ -22,11 +25,6 @@
 			</section>
 			<section id="main">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				<script>
-					var two = new Two({
-   						fullscreen: true
-					});
-				</script>
 			</section>
 		</div>
 		<footer>
